...
    Scaffold(
        modifier = Modifier.fillMaxSize(),
        floatingActionButton = {
            FloatingActionButton(
                onClick = navigateToCreate,
                content = {
                    Icon(Icons.Default.Add, contentDescription = "Add new medicine")
                }
            )
        }
    ) { innerPadding ->
        Column(
            modifier = Modifier
                .padding(innerPadding),
        ) {
            Text(
                "Medicines List",
                modifier = Modifier
                    .semantics { heading() },
            )
            LazyColumn {
                items(
                    items = medicineListUiState.medicineList,
...
